--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 程序配置
 ## 程序名称
-MAIN_VITE_TITLE = "SPlayer"
+MAIN_VITE_TITLE = ".env.example"
 ## 程序主端口
 MAIN_VITE_MAIN_PORT = 7899
 ## 程序开发环境运行端口
@@ -13,14 +13,14 @@ MAIN_VITE_SERVER_HOST = 127.0.0.1
 MAIN_VITE_SERVER_PORT = 11451
 ## API 在线地址（ 网址结尾不要加 / ）
 ### 用于非客户端（ 浏览器环境 ）
-RENDERER_VITE_SERVER_URL = /api
+RENDERER_VITE_SERVER_URL = https://api.music.ecylt.top
 
 # 程序信息
-RENDERER_VITE_SITE_TITLE = "SPlayer"
-RENDERER_VITE_SITE_ANTHOR = "無名"
-RENDERER_VITE_SITE_KEYWORDS = "SPlayer,云音乐,播放器,在线音乐,在线播放器,音乐播放器"
+RENDERER_VITE_SITE_TITLE = "EcyMusic"
+RENDERER_VITE_SITE_ANTHOR = "吴先生"
+RENDERER_VITE_SITE_KEYWORDS = "EcyMusic,云音乐,播放器,在线音乐,在线播放器,音乐播放器"
 RENDERER_VITE_SITE_DES = "一个简约的在线音乐播放器，具有音乐搜索、播放、每日推荐、私人FM、歌词显示、歌曲评论、网易云登录与云盘等功能"
-RENDERER_VITE_SITE_URL = "imsyy.top"
+RENDERER_VITE_SITE_URL = "ecylt.top"
 
 # Cookie
 ## 咪咕音乐 Cookie
@@ -31,8 +31,8 @@ MAIN_VITE_MIGU_COOKIE = ""
 ## 公告类型
 RENDERER_VITE_ANN_TYPE = "info"
 ## 公告标题
-RENDERER_VITE_ANN_TITLE = ""
+RENDERER_VITE_ANN_TITLE = "公告"
 ## 公告内容
-RENDERER_VITE_ANN_CONTENT = ""
+RENDERER_VITE_ANN_CONTENT = "欢迎使用"
 ## 公告时长（毫秒）不可超过 999999
 RENDERER_VITE_ANN_DURATION = 8000
