--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 程序配置
 ## 程序名称
-MAIN_VITE_TITLE = ".env.example"
+MAIN_VITE_TITLE = "EcyMusic"
 ## 程序主端口
 MAIN_VITE_MAIN_PORT = 7899
 ## 程序开发环境运行端口
